# anonymous-airdrop

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  sample_eligible.csv
.github/workflows/: ci.yml
contracts/: foundry.toml  package.json
contracts/src/: AnonymousAirdrop.sol
contracts/test/: AnonymousAirdrop.t.sol
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
scripts/: build.sh  deploy.sh
