[package]
name = "anonymous-airdrop"
version = "0.1.0"
edition = "2024"

[dependencies]
risc0-zkvm = { version = "3.0", features = ["client"] }
methods = { path = "../methods" }
alloy-primitives = { workspace = true }
k256 = { workspace = true }
sha2 = { workspace = true }
tiny-keccak = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
