[package]
name = "airdrop-guest"
version = "0.1.0"
edition = "2024"

[dependencies]
risc0-zkvm = { workspace = true, features = ["std"] }
k256 = { workspace = true }
sha2 = { workspace = true }
tiny-keccak = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
